<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorSurface"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/about_title"
        app:titleTextColor="@color/colorTextPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_md">

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.FitZone.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_heading"
                        android:textAppearance="@style/TextAppearance.FitZone.Heading2"
                        android:layout_marginBottom="@dimen/spacing_sm" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_intro"
                        android:textAppearance="@style/TextAppearance.FitZone.Body"
                        android:layout_marginBottom="@dimen/spacing_lg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_values_title"
                        android:textAppearance="@style/TextAppearance.FitZone.Heading3"
                        android:layout_marginBottom="@dimen/spacing_sm" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_value_1"
                        android:textAppearance="@style/TextAppearance.FitZone.Body"
                        android:layout_marginBottom="@dimen/spacing_xs" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_value_2"
                        android:textAppearance="@style/TextAppearance.FitZone.Body"
                        android:layout_marginBottom="@dimen/spacing_xs" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_value_3"
                        android:textAppearance="@style/TextAppearance.FitZone.Body"
                        android:layout_marginBottom="@dimen/spacing_xs" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_value_4"
                        android:textAppearance="@style/TextAppearance.FitZone.Body"
                        android:layout_marginBottom="@dimen/spacing_lg" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_closing"
                        android:textAppearance="@style/TextAppearance.FitZone.BodySecondary" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>