<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorSurface"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/profile_personal_information"
        app:titleTextColor="@color/colorTextPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_md">

            <TextView style="@style/TextAppearance.FitZone.Caption" android:text="@string/label_full_name" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:id="@+id/tvFullName" style="@style/TextAppearance.FitZone.Body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/spacing_md" />

            <TextView style="@style/TextAppearance.FitZone.Caption" android:text="@string/label_email" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:id="@+id/tvEmail" style="@style/TextAppearance.FitZone.Body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/spacing_md" />

            <TextView style="@style/TextAppearance.FitZone.Caption" android:text="@string/label_mobile" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:id="@+id/tvMobile" style="@style/TextAppearance.FitZone.Body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/spacing_md" />

            <TextView style="@style/TextAppearance.FitZone.Caption" android:text="@string/label_dob" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:id="@+id/tvDob" style="@style/TextAppearance.FitZone.Body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/spacing_md" />

            <TextView style="@style/TextAppearance.FitZone.Caption" android:text="@string/label_gender" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:id="@+id/tvGender" style="@style/TextAppearance.FitZone.Body" android:layout_width="wrap_content" android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>