<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorSurface"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/profile_help_support"
        app:titleTextColor="@color/colorTextPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.FitZone.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_md">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_lg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_faq_title"
                    android:textColor="@color/colorPrimary"
                    android:textAppearance="@style/TextAppearance.FitZone.Heading3"
                    android:layout_marginBottom="@dimen/spacing_md" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_faq_placeholder"
                    android:textColor="@color/colorWhite"
                    android:textAppearance="@style/TextAppearance.FitZone.BodySecondary"
                    android:layout_marginBottom="@dimen/spacing_lg" />

                <Button
                    android:id="@+id/btnEmailUs"
                    style="@style/Widget.FitZone.Button.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_email_us"
                    android:layout_marginBottom="@dimen/spacing_md" />

                <Button
                    android:id="@+id/btnCallUs"
                    style="@style/Widget.FitZone.Button.Outline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_call_us" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </ScrollView>
</LinearLayout>